<resources>
    <string name="app_name">Walmart</string>
    <string name="signin_title">Sign in to your account</string>
    <string name="signin_email_label">Email address (required)</string>
    <string name="signin_password_label">Password (required)</string>
    <string name="signin_signin_btn_label">Sign in</string>
    <string name="signin_forgot_password_label">Forgot password?</string>
    <string name="signin_dont_have_account_label">───── Don\'t have an account? ─────</string>
    <string name="signin_signup_btn_label">Create a new account</string>
    <string name="signup_title">Create your account</string>
    <string name="signup_required_field_label">* required field</string>
    <string name="signup_firstname_label">First name*</string>
    <string name="signup_lastname_label">Last name*</string>
    <string name="signup_email_label">Email address*</string>
    <string name="signup_password_label">Password*</string>
    <string name="signup_signup_btn_label">Create Account</string>
    <string name="shopping_category_title">Shop By Categories</string>
</resources>