<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginTop="176dp"
        android:ems="14"
        android:inputType="text|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="172dp"
        android:paddingLeft="20dp"
        android:text="@string/signup_password_label"
        android:textColor="@color/formlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignupFirstname" />

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginTop="88dp"
        android:ems="14"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:paddingLeft="20dp"
        android:text="@string/signup_email_label"
        android:textColor="@color/formlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignupFirstname" />

    <EditText
        android:id="@+id/etSignupLastname"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:ems="14"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="20dp"
        android:text="@string/signup_lastname_label"
        android:textColor="@color/formlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignupFirstname" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/signup_title"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:paddingLeft="20dp"
        android:text="@string/signup_firstname_label"
        android:textColor="@color/formlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etSignupFirstname"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:ems="14"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/signup_signup_btn_label"
        app:backgroundTint="#2A94EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart_logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/signup_required_field_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>